--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,7 @@ jobs:
           
       - name: Install bundle
         run: |
+          gem install bundler
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
           
