--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,5 +43,7 @@ jobs:
           PLAY_CONFIG_JSON: ${{ secrets.PLAY_CONFIG_JSON }}
           
       - name: Distribute app to Beta track
-        run: bundle exec fastlane beta
+        run: |
+           bundle exec fastlane beta
+           chmod a+x gradlew
         
