--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,5 +44,6 @@ jobs:
           
       - name: Distribute app to Beta track
         run: |
+           fastlane supply init
            chmod a+x gradlew
            bundle exec fastlane beta
