--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,6 +47,8 @@ jobs:
           
       - name: Distribute app to Beta track
         run: |
+           cd app
+           fastlane init
            #fastlane supply init
            chmod a+x gradlew
            bundle exec fastlane beta
