--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,8 +47,8 @@ jobs:
           
       - name: Distribute app to Beta track
         run: |
-           sudo chmod 777 /var/lib/gems/2.7.0 directory
-           fastlane init
+           #sudo chmod 777 /var/lib/gems/2.7.0 directory
+           #fastlane init
            #fastlane supply init
            chmod a+x gradlew
            bundle exec fastlane beta
